src/model/snapshots/git_ai__model__authorship_log_serialization__tests__parse_line_ranges.snap
---
source: src/model/authorship_log_serialization.rs
expression: ranges
---
[
    Single(
        1,
    ),
    Single(
        2,
    ),
    Range(
        19,
        222,
    ),
]
